--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,6 +2,7 @@
 hard_tabs = true
 max_width = 100
 use_small_heuristics = "Max"
+edition = "2021"
 # Imports
 imports_granularity = "Crate"
 reorder_imports = true
