--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -37,6 +37,8 @@ jobs:
             cargo clean
             # cargo build --release --features runtime-benchmarks
             cargo build
+      - name: Check Formatting
+        run: cargo fmt --check
       - name: Test Project
         run: cargo test
       - name: Run Cargo Trampulin
