--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -12,13 +12,17 @@ jobs:
       - name: Cache Rust Dependecies
         uses: actions/cache@v2
         with:
-         path: |
-           ~/.cargo/registry
-           ~/.cargo/git
-           target
-         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Install toolchain
-        run: ./scripts/init.sh
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Add wasm toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          target: wasm32-unknown-unknown
+          override: true
       - name: Add fmt
         # v1.5.0 includes fixes of closures formatting
         run: |
@@ -34,9 +38,9 @@ jobs:
           cd ../Polkadex
       - name: Build Project
         run: |
-            cargo clean
-            # cargo build --release --features runtime-benchmarks
-            cargo build
+          cargo clean
+          # cargo build --release --features runtime-benchmarks
+          cargo build
       - name: Check Formatting
         run: cargo fmt --check
       - name: Test Project
