--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -48,16 +48,14 @@ jobs:
       - name: Test Project
         run: cargo test
       - name: Run Cargo Trampulin
-        if: github.event_name == 'push'
         uses: actions-rs/tarpaulin@v0.1
         with:
-          version: '0.15.0'
           args: '--exclude polkadex-node node-polkadex-runtime polkadex-primitives  --workspace'
       - name: Upload to codecov.io
-        if: github.event_name == 'push'
-        uses: codecov/codecov-action@v1.0.2
+        uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
+          fail_ci_if_error: true
       - name: Archive code coverage results
         if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
